tests/NormalTests/paczka1/small_fuzzy/39138545.err
Error in line 2: 14wUARQ4K7K A167 61,7
Error in line 5: azgRF S322 52,'
Error in line 4: azgRF A167 4,4
Error in line 6: azgRF S322 187,4
Error in line 3: 14wUARQ4K7K S322 22,2
Error in line 9: 14wUARQ4K7K A725 53,7
